--- a/test/paprcolumns.html
+++ b/test/paprcolumns.html
@@ -21,7 +21,7 @@
    <div id="qunit"></div>
    <div id="qunit-fixture">
       <div class="article">
-         <p>
+         <p id="p1">
             Par 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultrices quam
             sit amet ipsum accumsan dapibus. Mauris convallis urna tortor, vestibulum
             consectetur urna feugiat in. Curabitur ultrices nisi eros, nec interdum nulla
@@ -33,7 +33,7 @@
             Suspendisse lectus dolor, tempus id neque a, pretium faucibus nunc. Sed vel
             nisl eget odio varius tincidunt ac id nunc. Praesent id blandit magna.
          </p>
-         <p>
+         <p id="p2">
             Par 2: Quisque sed magna feugiat, iaculis risus at, tincidunt eros. In hac habitasse
             platea dictumst. Phasellus malesuada eros et leo mattis cursus eget vel nisi.
             Maecenas vitae tortor nunc. Fusce ipsum quam, tempus a ornare vel, iaculis quis
@@ -45,7 +45,7 @@
             Nam hendrerit arcu quis sagittis aliquam. Maecenas vel dui quis dui interdum
             congue.
          </p>
-         <p>
+         <p id="p3">
             Par 3: Phasellus leo est, ornare quis gravida a, posuere vel risus. Nulla facilisi.
             Cras malesuada suscipit congue. Proin ultricies, lorem quis pretium
             condimentum, orci justo pharetra nibh, sit amet aliquam purus dui id quam.
@@ -56,18 +56,41 @@
             viverra eu id mauris. In dapibus faucibus elit, sit amet varius arcu semper
             rutrum. In iaculis euismod est, a blandit justo pulvinar id.
          </p>
-         <p>
-            Par 4: Vestibulum luctus nisl dignissim aliquam posuere. Phasellus vestibulum
-            convallis odio. Vivamus sed dignissim odio. Morbi ullamcorper felis eu ante
-            tincidunt, in ornare elit interdum. Phasellus ut risus sed mauris tempus
-            faucibus. Phasellus bibendum lorem sed tincidunt bibendum. Cras non eleifend
-            quam. Donec et elit vel nisl consectetur bibendum id vitae purus. In eu orci
-            sagittis, facilisis nulla a, egestas leo. Donec eleifend leo sit amet rhoncus
-            faucibus. Cras eu ligula sed diam vulputate posuere eget sed elit. Etiam a
-            turpis lacus. Nullam ac tincidunt nibh, nec malesuada lacus. Curabitur faucibus
-            eros leo, eu tempor lectus auctor sed. Curabitur consectetur egestas auctor.
-         </p>
-         <p>
+         <div class="box" id="p4">
+            <p id="p4-box">
+               Par 4 (box): Vestibulum luctus nisl dignissim aliquam posuere. Phasellus
+               convallis odio. Vivamus sed dignissim odio. Morbi ullamcorper felis eu ante
+               tincidunt, in ornare elit interdum. Phasellus ut risus sed mauris tempus
+               faucibus. Phasellus bibendum lorem sed tincidunt bibendum. Cras non eleifend
+               quam. Donec et elit vel nisl consectetur bibendum id vitae purus. In eu orci
+               sagittis, facilisis nulla a, egestas leo. Donec eleifend leo sit amet rhoncus
+               faucibus. Cras eu ligula sed diam vulputate posuere eget sed elit. Etiam a
+               turpis lacus. Nullam ac tincidunt nibh, nec malesuada lacus. Curabitur faucibus
+               eros leo, eu tempor lectus auctor sed. Curabitur consectetur egestas auctor.
+            </p>
+            <p id="p4-boxp2">
+               Par 4 (box p2): Vestibulum luctus nisl dignissim aliquam posuere. Phasellus
+               convallis odio. Vivamus sed dignissim odio. Morbi ullamcorper felis eu ante
+               tincidunt, in ornare elit interdum. Phasellus ut risus sed mauris tempus
+               faucibus. Phasellus bibendum lorem sed tincidunt bibendum. Cras non eleifend
+               quam. Donec et elit vel nisl consectetur bibendum id vitae purus. In eu orci
+               sagittis, facilisis nulla a, egestas leo. Donec eleifend leo sit amet rhoncus
+               faucibus. Cras eu ligula sed diam vulputate posuere eget sed elit. Etiam a
+               turpis lacus. Nullam ac tincidunt nibh, nec malesuada lacus. Curabitur faucibus
+               eros leo, eu tempor lectus auctor sed. Curabitur consectetur egestas auctor.
+            </p>
+         </div>
+         <div class="notbox">
+            <p id="p4-afterBox">
+               Par 4 (after box): Pellentesque ac arcu nisi. Nulla ut ultrices purus, vitae
+               eleifend augue. Curabitur tempor diam posuere neque malesuada egestas. Fusce
+               odio diam, elementum non urna sed, lobortis gravida lacus. In felis neque,
+               rhoncus sit amet quam vitae, semper bibendum dolor. Pellentesque vel imperdiet
+               neque. Sed ultricies adipiscing elit sed ultricies. Nam augue tortor, rutrum
+               quis lobortis aliquam, interdum eget augue.
+            </p>
+         </div>
+         <p id="p5">
             Par 5: Quisque gravida vehicula est vitae faucibus. Curabitur nec est at sapien
             consequat malesuada sit amet eu eros. Ut nec magna dolor. Aenean et turpis
             varius, auctor tortor sed, faucibus erat. Quisque ut tortor erat. Duis iaculis
@@ -81,7 +104,7 @@
             suscipit pharetra. Etiam commodo leo ante, sed dictum quam euismod et. Nam
             facilisis scelerisque velit sed mollis.
          </p>
-         <p>
+         <p id="p6">
             Par 6: Pellentesque iaculis, ligula at volutpat rutrum, ante velit auctor risus, nec
             rhoncus felis lectus et orci. Morbi sit amet tortor quis odio gravida volutpat
             nec semper odio. Donec congue odio lectus, ac aliquet orci scelerisque quis.
@@ -92,7 +115,7 @@
             ullamcorper. Duis scelerisque fermentum sem, nec placerat urna faucibus sit
             amet. Aenean ullamcorper magna nulla, eget adipiscing arcu ullamcorper ut.
          </p>
-         <p>
+         <p id="p7">
             Par 7: Maecenas quis tincidunt lectus, id sagittis lorem. Nullam in posuere nunc. Nunc
             semper, massa quis mollis dignissim, orci lacus imperdiet elit, vitae dignissim
             eros odio in risus. In vel vestibulum turpis. Ut in tellus vitae ipsum
@@ -104,28 +127,28 @@
             gravida non, dapibus quis justo. Integer ullamcorper aliquet mollis. Quisque eu
             varius ligula.
          </p>
-         <p>
+         <p id="p8">
             Par 8: Proin venenatis tellus at ante accumsan, vel convallis odio pulvinar. Fusce
             condimentum fermentum odio. Etiam et pellentesque mauris. Maecenas consequat
             molestie quam et sodales. Nulla at elit viverra, sollicitudin justo eget,
             mattis est. Vestibulum varius leo ac bibendum dictum. Aenean in quam luctus,
             facilisis lorem sollicitudin, ornare nunc. Proin sit amet vulputate erat.
          </p>
-         <p>
+         <p id="p9">
             Par 9: Nullam placerat, nibh ac porta aliquam, felis odio lacinia odio, eget molestie
             magna sapien vel ligula. Donec mattis egestas accumsan. Sed sit amet sem sed
             tellus gravida eleifend. Pellentesque sit amet varius quam. Etiam vel libero
             nec lacus sodales bibendum. Quisque pretium lacus facilisis nulla dapibus
             vehicula. Quisque eleifend leo vel sapien malesuada pretium.
          </p>
-         <p>
+         <p id="p10">
             Par 10: Nulla quis luctus nisl. Sed vel lacinia orci. Nam venenatis tellus at enim
             mattis, in volutpat mi vulputate. Quisque ipsum orci, mollis sed imperdiet eu,
             convallis eget nulla. Ut imperdiet scelerisque dui at pretium. Donec vestibulum
             eleifend hendrerit. Aenean dapibus convallis odio. Ut ullamcorper tempor dui et
             gravida. Sed eu consequat enim.
          </p>
-         <p>
+         <p id="p11">
             Par 11: Aenean hendrerit lobortis odio id consequat. Duis quis pulvinar nulla. Quisque
             sed nunc eget nulla rutrum porta. Nullam cursus turpis nec enim porttitor
             ultrices. Nam malesuada odio id ipsum gravida, sed semper sem fringilla. Nam mi
@@ -133,7 +156,7 @@
             orci, vel accumsan arcu fringilla vel. Cras sit amet tellus a velit auctor
             pulvinar quis id diam. Maecenas venenatis venenatis risus eget dictum.
          </p>
-         <p>
+         <p id="p12">
             Par 12: Morbi commodo augue a justo pellentesque, id tincidunt velit sollicitudin. Cras
             diam augue, suscipit non velit accumsan, rhoncus mollis tellus. Vivamus lacus
             velit, placerat at ante in, pellentesque fringilla arcu. Etiam vestibulum id
@@ -144,7 +167,7 @@
             ultricies scelerisque, orci orci blandit dui, sit amet rhoncus risus ante quis
             magna.
          </p>
-         <p>
+         <p id="p13">
             Par 13: Nulla ullamcorper at erat id tempor. Fusce pellentesque neque et imperdiet
             ullamcorper. Sed quis tristique leo. Duis posuere ullamcorper felis quis
             tempus. Quisque imperdiet arcu id metus tristique dignissim. Duis ac mauris
@@ -152,7 +175,7 @@
             pellentesque volutpat. Donec pellentesque, massa eu fermentum rhoncus, neque
             augue tempus est, ut condimentum justo massa id orci.
          </p>
-         <p>
+         <p id="p14">
             Par 14: Proin nec nulla sollicitudin massa pulvinar vulputate. Donec eu diam in dolor
             cursus hendrerit. Maecenas eu dui pretium, varius ipsum id, faucibus lectus.
             Maecenas tristique leo ornare porttitor ullamcorper. Sed quis risus commodo,
@@ -160,7 +183,7 @@
             vel, congue velit. Donec nec nisl erat. Etiam scelerisque eros et libero
             pulvinar, vel feugiat mauris cursus.
          </p>
-         <p>
+         <p id="p15">
             Par 15: Aenean mattis orci ut leo interdum sollicitudin. Quisque imperdiet orci a
             ante molestie pulvinar. Proin molestie facilisis risus sit amet gravida. Lorem
             ipsum dolor sit amet, consectetur adipiscing elit. Praesent consequat nec erat
