--- a/test/paprcolumns.html
+++ b/test/paprcolumns.html
@@ -10,6 +10,7 @@
   <script src="../libs/qunit/qunit.js"></script>
   <!-- Load local lib and tests. -->
   <script src="../dist/paprcolumns.js"></script>
+  <script src="testhelpers.js"></script>
   <script src="paprcolumns_test.js"></script>
   <script src="fixednumbercolumns_test.js"></script>
   <!-- Removing access to jQuery and $. But it'll still be available as _$, if
