--- a/samples/fixed-column-height.html
+++ b/samples/fixed-column-height.html
@@ -12,8 +12,8 @@
       (function($) {
          $(function() {
             $('div.article').paprcolumns({
-               mode: $.paprcolumns.modes.FIXED_NUMBER,
-               columns: 4
+               mode: $.paprcolumns.modes.FIXED_HEIGHT,
+               columnHeight: 400
             });
          });
       }(jQuery));
