--- a/test/paprcolumns.html
+++ b/test/paprcolumns.html
@@ -47,6 +47,7 @@
             congue.
          </p>
          <p id="p3">
+            <img id='myFirstImg' src="images/img-100x150.jpg" class="flRight" />
             Par 3: Phasellus leo est, ornare quis gravida a, posuere vel risus. Nulla facilisi.
             Cras malesuada suscipit congue. Proin ultricies, lorem quis pretium
             condimentum, orci justo pharetra nibh, sit amet aliquam purus dui id quam.
@@ -92,6 +93,7 @@
             </p>
          </div>
          <p id="p5">
+            <img src="images/img-200x200.jpg" class="full" />
             Par 5: Quisque gravida vehicula est vitae faucibus. Curabitur nec est at sapien
             consequat malesuada sit amet eu eros. Ut nec magna dolor. Aenean et turpis
             varius, auctor tortor sed, faucibus erat. Quisque ut tortor erat. Duis iaculis
