--- a/samples/fixed-number-of-columns.html
+++ b/samples/fixed-number-of-columns.html
@@ -51,7 +51,7 @@
          congue.
       </p>
       <p id="p3">
-         <img src="images/img-100x150.jpg" class="flRight" />
+         <img id='myFirstImg' src="images/img-100x150.jpg" class="flRight" />
          Par 3: Phasellus leo est, ornare quis gravida a, posuere vel risus. Nulla facilisi.
          Cras malesuada suscipit congue. Proin ultricies, lorem quis pretium
          condimentum, orci justo pharetra nibh, sit amet aliquam purus dui id quam.
